# bunq-winners

./: .bunq-session.json  .env.example  .gitignore  README.md  agent.js  bunq-voice-plan.md  main.py  memory.json  pyproject.toml
backend/: config.py  memory.py
backend/bunq_client/: __init__.py  bootstrap.py  client.py
backend/media/: __init__.py  stt.py
backend/orchestrator/: anthropic_adapter.py  llm.py  prompts.py
backend/session/: store.py
backend/tests/: fakes.py  test_config.py  test_orchestrator_llm.py  test_session_store.py  test_tools_registry.py
backend/tools/: accounts.py  balance.py  bunqme.py  cards.py  contacts.py  events.py  financial_context.py  notifications.py  payments.py  registry.py  requests.py  scheduled.py
docs/superpowers/plans/: 2026-04-24-bunq-voice-backend.md  2026-04-25-local-memory.md  2026-04-25-lynn-accessibility.md
docs/superpowers/specs/: 2026-04-24-bunq-voice-demo-spine-design.md  2026-04-25-elevenlabs-tts-design.md  2026-04-25-lynn-accessibility-design.md  2026-04-25-voice-orb-frontend-design.md
frontend/: demo-app.html  demo-transition.html  demo-voice.html  index.html  test_stt.html
scripts/: export_earcons.mjs  repl_fake.py  seed_sandbox.py  serve_test.py  smoke_bunq.py  test_stt.py
