[project]
name = "bunq-voice-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-dotenv>=1.0",
  "bunq_sdk>=1.21",
  "anthropic>=0.40",
  "openai>=1.55",
  "httpx>=0.27",
  "pydantic>=2.9",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "pytest-mock>=3.14"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
